# linphone

./: CMakeLists.txt
coreapi/: callbacks.c  linphonecall.c  linphonecore.c  linphonecore_jni.cc  private.h  quality_reporting.c
java/common/org/linphone/core/: LinphoneCore.java
java/impl/org/linphone/core/: LinphoneCoreImpl.java
src/: CMakeLists.txt
src/chat/: chat-room-p.h  chat-room.cpp  chat-room.h
src/conference/: participant.cpp  participant.h
src/conference/params/: call-session-params.cpp
src/object/: singleton.h
src/utils/: content-type.cpp  utils.cpp
tester/: call_single_tester.c  tester.c
